# src/shared/infra/http/routes/index.ts
@@ -3,13 +3,16 @@ import { Router } from "express";
 import { authenticateRoutes } from "./authenticate.routes";
 import { carsRoutes } from "./cars.routes";
 import { categoriesRoutes } from "./categories.routes";
+import { passwordRoutes } from "./password.routes";
 import { rentalRoutes } from "./rentals.routes";
 import { specificationsRoutes } from "./specifications.routes";
 import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
-router.use("/session", authenticateRoutes);
+router.use(authenticateRoutes);
+
+router.use("/password", passwordRoutes);
 
 router.use("/categories", categoriesRoutes);
 
